CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800_detail__x/Batchsit_t_rpt_acf_800_detail__x.object-meta.xml
<CustomObject>
    <description>batchsit$t_rpt_acf_800_detail</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_rpt_acf_800_detail</externalName>
    <label>Batchsit$t_rpt_acf_800_detail</label>
    <pluralLabel>Batchsit$t_rpt_acf_800_detail</pluralLabel>
</CustomObject>