CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800_detail__x/fields/cde_type_provr__c.field-meta.xml
<CustomField>
    <fullName>cde_type_provr__c</fullName>
    <description>cde_type_provr</description>
    <externalDeveloperName>cde_type_provr</externalDeveloperName>
    <label>Cde_type_provr</label>
    <length>80</length>
    <type>Text</type>
</CustomField>