CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800_detail__x/fields/dte_created__c.field-meta.xml
<CustomField>
    <fullName>dte_created__c</fullName>
    <description>dte_created</description>
    <externalDeveloperName>dte_created</externalDeveloperName>
    <label>Dte_created</label>
    <type>DateTime</type>
</CustomField>